--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 22/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 121 points<br>
+Unlocked 22/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 124 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -25,6 +25,7 @@ Unlocked 22/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Hunter (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
+<li><div class="title">Apprentice Hunter (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Apprentice Investigator (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Locksmith (Level 1)</div>  <div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -58,7 +59,7 @@ Unlocked 22/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 Git commands sorted by usage:
 <pre style="text-align: left">
     163 status
-    124 --git-dir=.git
+    125 --git-dir=.git
      71 checkout
      63 add
      62 difftool
@@ -75,6 +76,7 @@ Git commands sorted by usage:
      10 pull
       7 tree
       7 stash
+      4 bisect
       3 init
       3 cherry-pick
       2 tag
@@ -83,7 +85,6 @@ Git commands sorted by usage:
       2 config
       2 clean
       2 blame
-      2 bisect
       1 remote
       1 gc
       1 fetch
