--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 23/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 130 points<br>
+Unlocked 23/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 135 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -49,6 +49,7 @@ Unlocked 23/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
+<li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
@@ -60,32 +61,32 @@ Unlocked 23/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    166 status
+    168 status
     131 --git-dir=.git
      74 checkout
-     64 add
-     62 difftool
-     60 commit
+     66 add
+     63 difftool
+     62 commit
      59 branch
      52 help
      44 push
+     22 rebase
      21 reset
-     21 rebase
      18 rev-parse
      14 --git-dir=/home/stavros/git/otp/.git
-     12 log
-     12 diff
+     13 log
+     13 diff
      11 pull
       8 bisect
       7 tree
       7 stash
+      3 mergetool
       3 init
+      3 clean
       3 cherry-pick
       2 tag
-      2 mergetool
       2 merge
       2 config
-      2 clean
       2 blame
       1 remote
       1 gc
