--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 24/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 146 points<br>
+Unlocked 24/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 151 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -50,6 +50,7 @@ Unlocked 24/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
+<li><div class="title">Cleaning lady (Level 4)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
@@ -63,26 +64,26 @@ Unlocked 24/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    184 status
-    131 --git-dir=.git
+    195 status
+    132 --git-dir=.git
      74 checkout
      74 add
-     70 difftool
+     71 difftool
      69 commit
      59 branch
-     52 help
+     53 help
      45 push
+     28 reset
      25 rebase
-     22 reset
      21 diff
      18 rev-parse
      17 log
      14 --git-dir=/home/stavros/git/otp/.git
+     13 clean
      11 pull
       8 bisect
       7 tree
       7 stash
-      5 clean
       3 mergetool
       3 init
       3 cherry-pick
