--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 157 points<br>
+Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 162 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -63,29 +63,32 @@ Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 6)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
+<li><div class="title">Thug (Level 4)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    209 status
-    139 --git-dir=.git
-     80 checkout
-     76 add
-     73 difftool
-     70 commit
-     64 branch
-     55 help
-     45 push
-     30 reset
-     25 rebase
-     21 diff
-     18 rev-parse
-     17 log
+    228 status
+    163 --git-dir=.git
+     92 checkout
+     81 difftool
+     79 add
+     74 branch
+     73 commit
+     63 help
+     47 push
+     33 reset
+     28 rebase
+     24 rev-parse
+     23 diff
+     18 log
+     15 remote
      14 --git-dir=/home/stavros/git/otp/.git
-     13 clean
-     11 pull
-      8 stash
+     14 clean
+     12 pull
+     11 stash
+      9 tree
       8 bisect
-      7 tree
+      4 --git-dir=/home/stavros/git/dialyzer_tests/.git
       3 mergetool
       3 init
       3 cherry-pick
@@ -95,7 +98,6 @@ Git commands sorted by usage:
       2 gc
       2 config
       1 revert
-      1 remote
       1 fetch
       1 achievements
 </pre>
