--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 162 points<br>
+Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 167 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -50,6 +50,7 @@ Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 6)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
+<li><div class="title">Blacksmith (Level 4)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Cleaning lady (Level 4)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
@@ -67,24 +68,24 @@ Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    228 status
-    163 --git-dir=.git
-     92 checkout
+    230 status
+    169 --git-dir=.git
+     98 checkout
      81 difftool
      79 add
-     74 branch
+     76 branch
      73 commit
-     63 help
-     47 push
+     65 help
+     49 push
      33 reset
-     28 rebase
+     29 rebase
      24 rev-parse
      23 diff
      18 log
      15 remote
      14 --git-dir=/home/stavros/git/otp/.git
      14 clean
-     12 pull
+     13 pull
      11 stash
       9 tree
       8 bisect
