--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 167 points<br>
+Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 172 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -59,6 +59,7 @@ Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
+<li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -68,31 +69,31 @@ Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    230 status
-    169 --git-dir=.git
-     98 checkout
-     81 difftool
-     79 add
-     76 branch
-     73 commit
-     65 help
+    241 status
+    191 --git-dir=.git
+    112 checkout
+     98 difftool
+     83 add
+     80 branch
+     77 commit
+     70 help
      49 push
-     33 reset
-     29 rebase
-     24 rev-parse
-     23 diff
-     18 log
+     36 reset
+     32 rebase
+     30 rev-parse
+     27 --git-dir=/home/stavros/git/otp/.git
+     26 diff
+     19 log
+     16 clean
+     15 stash
      15 remote
-     14 --git-dir=/home/stavros/git/otp/.git
-     14 clean
-     13 pull
-     11 stash
+     14 pull
       9 tree
       8 bisect
+      5 mergetool
       4 --git-dir=/home/stavros/git/dialyzer_tests/.git
-      3 mergetool
+      4 cherry-pick
       3 init
-      3 cherry-pick
       3 blame
       2 tag
       2 merge
