--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 172 points<br>
+Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 176 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Banker (Level 2)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
+<li><div class="title">Apprentice Banker (Level 3)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 2)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 3)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
@@ -69,34 +70,34 @@ Unlocked 25/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    241 status
-    191 --git-dir=.git
-    112 checkout
-     98 difftool
+    244 status
+    200 --git-dir=.git
+    116 checkout
+    100 difftool
      83 add
      80 branch
      77 commit
-     70 help
+     71 help
      49 push
-     36 reset
-     32 rebase
-     30 rev-parse
+     38 reset
+     33 rebase
+     31 rev-parse
+     28 diff
      27 --git-dir=/home/stavros/git/otp/.git
-     26 diff
      19 log
+     17 stash
      16 clean
-     15 stash
      15 remote
      14 pull
       9 tree
       8 bisect
       5 mergetool
+      5 cherry-pick
       4 --git-dir=/home/stavros/git/dialyzer_tests/.git
-      4 cherry-pick
+      3 merge
       3 init
       3 blame
       2 tag
-      2 merge
       2 gc
       2 config
       1 revert
